# CocosCreatorDemo

./: .gitignore  package.json
Android/TradPlusSDK/: TPNativeAdListener.java  TPSplashPopupWindow.java
assets/Scene/: Banner.scene  Banner.ts  DemoSetting.ts  Interstitial.scene  Interstitial.ts  Native.scene  Native.ts  Other.scene  Other.ts  Rewarded.scene  Rewarded.ts  Setting.scene  Setting.ts  Splash.scene  Splash.ts  main.scene  main.ts
iOS/: CMakeLists.txt  CMakeLists382.txt
native/engine/android/: CMakeLists.txt
native/engine/android/app/: AndroidManifest.xml  build.gradle
native/engine/android/instantapp/: AndroidManifest.xml
native/engine/ios/: AppDelegate.mm  CMakeLists.txt  Info.plist
